--- a/Cataloguer/Cataloguer.csproj
+++ b/Cataloguer/Cataloguer.csproj
@@ -217,6 +217,7 @@
     <Content Include="Views\Home\Local.cshtml" />
     <Content Include="Views\Home\ArtistProfile.cshtml" />
     <Content Include="Views\Home\ArtistTopTracks.cshtml" />
+    <Content Include="Views\Home\ArtistTopAlbums.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
