--- a/Cataloguer/Cataloguer.csproj
+++ b/Cataloguer/Cataloguer.csproj
@@ -176,10 +176,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\MusicCatalog.mdf" />
-    <Content Include="App_Data\MusicCatalog_log.ldf">
-      <DependentUpon>MusicCatalog.mdf</DependentUpon>
-    </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -262,6 +258,9 @@
     <EmbeddedResource Include="Migrations\201710050933089_addPrivateFields.resx">
       <DependentUpon>201710050933089_addPrivateFields.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="App_Data\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
