--- a/Cataloguer/Web.config
+++ b/Cataloguer/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MusicContext" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename='D:\Database\MusicCatalog.mdf';Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MusicContext" connectionString="Server=;Database=MusicCatalog;Trusted_Connection=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
