--- a/LocalParser/App.config
+++ b/LocalParser/App.config
@@ -5,7 +5,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="MusicContext" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename='D:\Database\MusicCatalog.mdf';Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MusicContext" connectionString="Server=;Database=MusicCatalog;Trusted_Connection=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
