--- a/Cataloguer/Cataloguer.csproj
+++ b/Cataloguer/Cataloguer.csproj
@@ -13,4 +13,21 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.3" PrivateAssets="All" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\NeuralNetwork\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="Models\NeuralNetwork\App.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
+    <None Update="Models\NeuralNetwork\MainWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
+    <None Update="Models\NeuralNetwork\ResultWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
+    <None Update="Models\NeuralNetwork\TestDataWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
+  </ItemGroup>
 </Project>
