--- a/Cataloguer/appsettings.json
+++ b/Cataloguer/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Cataloguer;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=.\\SQLEXPRESS16;Database=Cataloguer;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
   "Logging": {
     "IncludeScopes": false,
